--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
     "send",
     "sms.ru"
   ],
-  "author": "Borodin Maxim <maxim@borodinart.ru> (http://borodinart.ru)",
+  "author": "Borodin Maxim <maxim@borodinart.ru> (http://borodinart.ru)"
 }
