--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sms_ru",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "sms.ru API client",
   "homepage": "https://github.com/Borodin/sms_ru",
   "main": "src/index",
@@ -13,5 +13,16 @@
     "send",
     "sms.ru"
   ],
-  "author": "Borodin Maxim <borodinmk@gmail.com> (http://borodinart.ru)"
+  "author": "Borodin Maxim <borodinmk@gmail.com> (http://maximborodin.ru)",
+  "bugs": {
+    "url": "https://github.com/Borodin/sms_ru/issues"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "http": "0.0.0",
+    "querystring": "^0.2.0"
+  }
 }
